tests/snapshots/svg_snapshots__bar.snap
---
source: tests/svg_snapshots.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="900" viewBox="0 0 1200 900">
<rect x="0" y="0" width="1200" height="900" fill="white"/>
<defs>
  <clipPath id="cp0"><rect x="95.00" y="125.00" width="1090.00" height="710.00"/></clipPath>
  <clipPath id="cp1"><rect x="15.00" y="15.00" width="1170.00" height="110.00"/></clipPath>
  <clipPath id="cp2"><rect x="71.00" y="835.00" width="1138.00" height="50.00"/></clipPath>
  <clipPath id="cp3"><rect x="-9.00" y="113.00" width="104.00" height="734.00"/></clipPath>
</defs>
<g clip-path="url(#cp0)">
  <rect x="131.33" y="157.27" width="290.67" height="677.73" fill="rgba(89,140,191,1.0000)"/>
  <rect x="494.67" y="157.27" width="290.67" height="677.73" fill="rgba(89,140,191,1.0000)"/>
  <rect x="858.00" y="157.27" width="290.67" height="677.73" fill="rgba(89,140,191,1.0000)"/>
</g>
<g clip-path="url(#cp1)">
  <text x="600.00" y="70.00" font-size="48" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging">
    <tspan x="600.00" dy="0.0">Region Count</tspan>
  </text>
</g>
<g clip-path="url(#cp2)">
  <rect x="95.00" y="834.50" width="1090.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <rect x="276.17" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="276.67" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging">East</text>
  <rect x="639.50" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="640.00" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging">West</text>
  <rect x="1002.83" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="1003.33" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging">North</text>
  <text x="640.00" y="860.00" font-size="36" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging">
    <tspan x="640.00" dy="0.0">region</tspan>
  </text>
</g>
<g clip-path="url(#cp3)">
  <rect x="94.50" y="125.00" width="1.00" height="710.00" fill="rgba(179,179,179,1.0000)"/>
  <rect x="92.00" y="802.23" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="802.73" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central">0</text>
  <rect x="92.00" y="587.08" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="587.58" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central">1</text>
  <rect x="92.00" y="371.92" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="372.42" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central">2</text>
  <rect x="92.00" y="156.77" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="157.27" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central">3</text>
</g>
</svg>
